# nextepc

./: .gitignore  meson.build  meson_options.txt
core/: meson.build  ogs-process.c  ogs-rand.c  ogs-socket.c
crypt/: meson.build
debian/: changelog  control  copyright  rules
include/open5gs/: meson.build  ogs-diameter.h  ogs-s1ap.h
lib/asn1c/common/: asn_internal.h  meson.build
lib/asn1c/s1ap/: meson.build
lib/core/: abts.c  meson.build  ogs-3gpp-types.c  ogs-3gpp-types.h  ogs-abort.c  ogs-conv.c  ogs-core.c  ogs-env.c  ogs-epoll.c  ogs-errno.c  ogs-fsm.c  ogs-hash.c  ogs-kqueue.c  ogs-log.c  ogs-memory.c  ogs-misc.c  ogs-notify.c  ogs-pkbuf.c  ogs-poll.c  ogs-process.c  ogs-queue.c  ogs-rand.c  ogs-rbtree.c  ogs-select.c  ogs-signal.c  ogs-sockaddr.c  ogs-socket.c  ogs-socknode.c  ogs-sockpair.c  ogs-strings.c  ogs-tcp.c  ogs-thread.c  ogs-time.c  ogs-timer.c  ogs-tlv.c  ogs-udp.c
lib/crypt/: kasumi.h  meson.build  milenage.c  ogs-aes-cmac.c  ogs-aes.c  ogs-sha1-hmac.c  ogs-sha1.c  ogs-sha2-hmac.c  ogs-sha2.c  snow-3g.h  zuc.h
lib/diameter/: config.c  init.c  libapp_sip.c  logger.c  meson.build  message.c  message.h  ogs-gx.h  ogs-rx.h  ogs-s6a.h
lib/diameter/s6a/: dict.c  dict.h
lib/s1ap/: conv.c  meson.build  message.c
src/core/: meson.build  ogs-abort.c  ogs-rand.c
src/crypt/: meson.build  zuc.c
src/hss/: hss-fd-path.c
src/shared/core/: abts.c  ogs-log.c  ogs-misc.c  ogs-tlv.h
src/shared/crypt/: meson.build  snow-3g.c
subprojects/: freeDiameter.wrap
tests/: meson.build
tests/core/: abts-main.c  conv-test.c  fsm-test.c  hash-test.c  list-test.c  log-test.c  memory-test.c  meson.build  pkbuf-test.c  poll-test.c  pool-test.c  queue-test.c  rbtree-test.c  socket-test.c  strings-test.c  thread-test.c  time-test.c  timer-test.c  tlv-test.c
tests/crypt/: abts-main.c  aes-test.c  meson.build  sha-test.c
tests/simple/: mnc3-test.c
